// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Elements|Button Link Primary Variant Snapshot 1`] = `
<div
  className="css-m9xbk1"
>
  <a
    className="css-izi4pz"
  >
    Primary link button
  </a>
</div>
`;

exports[`Storyshots Elements|Button Link Secondary Variant Snapshot 1`] = `
<div
  className="css-m9xbk1"
>
  <a
    className="css-u32c6s"
  >
    Primary link button
  </a>
</div>
`;
